--- a/templates/Objects/main.html
+++ b/templates/Objects/main.html
@@ -19,9 +19,9 @@
     <main> 
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
-                <input type="submit" value="sort" class="filter-bar__a-z material-symbols-outlined col-md-1 col-0">
-                <input type="submit" value="sort" class="filter-bar__z-a material-symbols-outlined col-md-1 col-0">
-                <input type="submit" value="all_inbox" class="filter-bar__type material-symbols-outlined col-md-1 col-3" onclick="window.location.href='/object_groups';">
+                <input type="submit" value="sort" class="filter-bar__a-z material-symbols-outlined col-md-1 col-0" title="Ordenar a-z">
+                <input type="submit" value="sort" class="filter-bar__z-a material-symbols-outlined col-md-1 col-0" title="Ordenar z-a">
+                <input type="submit" value="all_inbox" class="filter-bar__type material-symbols-outlined col-md-1 col-3" onclick="window.location.href='/object_groups';" title="Gestionas Grupos de Objetos">
                 <div class="filter-bar__name col-md-4 col-8">
                     <input type="text" placeholder="Buscar objeto por nombre..." id="search-input">
                     <input value="search" type="submit" class="material-symbols-outlined">
