--- a/templates/Users/subusers.html
+++ b/templates/Users/subusers.html
@@ -21,7 +21,7 @@
             <div class="filter-bar__filter-container row">
                 <input type="submit" value="sort" class="filter-bar__a-z material-symbols-outlined col-md-1 col-0" title="Ordenar a-z">
                 <input type="submit" value="sort" class="filter-bar__z-a material-symbols-outlined col-md-1 col-0" title="Ordenar z-a">
-                <input onclick="window.location.href='/subusers_group';" type="submit" value="Groups" class="filter-bar__type material-symbols-outlined col-md-1 col-3" title="Gestionar Grupos">
+                <input onclick="window.location.href='/subusers_group';" type="submit" value="Groups" class="filter-bar__type material-symbols-outlined col-md-1 col-3" title="Gestionar Grupos de Usuarios">
                 <div class="filter-bar__name col-md-4 col-8">
                     <input type="text" class="filter-bar__search" placeholder="Buscar por nombre">
                     <input value="search" type="submit" class="material-symbols-outlined">
